# lazy-take-notes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GETTING_STARTED.md  PLUGINS.md  README.md  TEMPLATES.md  lazy-take-notes.spec  pyproject.toml  setup.sh  trolley.toml
.github/workflows/: ci.yml
docs/: PLUGINS.md
native/: .gitignore  AGENTS.md
native/coreaudio_tap/: Package.swift
native/coreaudio_tap/Sources/: main.swift
scripts/: build_app_bundle.sh  build_desktop.sh  build_native.sh  pyinstaller_runtime_hook.py
scripts/linux-smoke/: Dockerfile  smoke_test.py
src/lazy_take_notes/: __init__.py  __main__.py  plugin_api.py
src/lazy_take_notes/l1_entities/: __init__.py  audio_constants.py  audio_mode.py  chat_message.py  config.py  digest_state.py  errors.py  session_files.py  template.py  transcript.py
src/lazy_take_notes/l2_use_cases/: __init__.py  compact_messages_use_case.py  digest_use_case.py  query_use_case.py  quick_action_use_case.py  transcribe_audio_use_case.py
src/lazy_take_notes/l2_use_cases/ports/: __init__.py  audio_source.py  config_loader.py  llm_client.py  model_resolver.py  persistence.py  template_loader.py  transcriber.py
src/lazy_take_notes/l2_use_cases/utils/: prompt_builder.py
src/lazy_take_notes/l3_interface_adapters/: __init__.py
src/lazy_take_notes/l3_interface_adapters/controllers/: __init__.py  session_controller.py
src/lazy_take_notes/l3_interface_adapters/gateways/: __init__.py  audio_file_loader.py  coreaudio_tap_source.py  file_persistence.py  hf_model_resolver.py  mixed_audio_source.py  ollama_llm_client.py  openai_llm_client.py  paths.py  soundcard_loopback_source.py  sounddevice_audio_source.py  subprocess_whisper_transcriber.py  subtitle_parser.py  whisper_transcriber.py  yaml_config_loader.py  yaml_template_loader.py  youtube_audio_downloader.py
src/lazy_take_notes/l3_interface_adapters/presenters/: __init__.py  messages.py
src/lazy_take_notes/l4_frameworks_and_drivers/: __init__.py  app.py  app.tcss  audio_worker.py  batch_runner.py  cli.py  cli_helpers.py  config.py  container.py  file_transcription_worker.py  infra_config.py  logging_setup.py  messages.py  plugin_api.py  plugin_manifest.py  session_picker.py  template_picker.py
src/lazy_take_notes/l4_frameworks_and_drivers/apps/: __init__.py  app.tcss  base.py  config.py  record.py  template_builder.py  transcribe.py  view.py
src/lazy_take_notes/l4_frameworks_and_drivers/drivers/: ghostty_driver.py
src/lazy_take_notes/l4_frameworks_and_drivers/pickers/: __init__.py  base.py  file_picker.py  session_picker.py  template_picker.py  welcome_picker.py
src/lazy_take_notes/l4_frameworks_and_drivers/widgets/: __init__.py  builtin_templates_notice.py  consent_notice.py  digest_panel.py  download_modal.py  help_modal.py  label_modal.py  query_modal.py  status_bar.py  transcript_panel.py
src/lazy_take_notes/l4_frameworks_and_drivers/workers/: __init__.py  audio_worker.py  file_transcription_worker.py
src/lazy_take_notes/templates/: daily_standup_en.yaml  daily_standup_zh_tw.yaml  default_en.yaml  default_zh_tw.yaml  lecture_notes_en.yaml  lecture_notes_zh_tw.yaml  podcast_shownotes_en.yaml  podcast_shownotes_zh_tw.yaml  sprint_retro_en.yaml  sprint_retro_zh_tw.yaml
tests/: conftest.py
tests/l1_entities/: test_audio_mode.py  test_config_models.py  test_digest_state.py  test_session_files.py  test_template_models.py  test_transcript.py
tests/l2_use_cases/: test_compact_messages.py  test_digest_trigger.py  test_digest_use_case.py  test_prompt_builder.py  test_query_use_case.py  test_quick_action_use_case.py  test_transcribe_audio.py
tests/l2_use_cases/utils/: test_prompt_builder.py
tests/l3_interface_adapters/: test_coreaudio_tap_source.py  test_file_persistence.py  test_hf_model_resolver.py  test_mixed_audio_source.py  test_ollama_llm_client.py  test_session_controller.py  test_soundcard_loopback_source.py  test_subprocess_whisper_transcriber.py  test_whisper_transcriber.py  test_yaml_config_loader.py  test_yaml_template_loader.py
tests/l3_interface_adapters/controllers/: test_session_controller.py
tests/l3_interface_adapters/gateways/: test_audio_file_loader.py  test_coreaudio_tap_source.py  test_file_persistence.py  test_hf_model_resolver.py  test_mixed_audio_source.py  test_ollama_llm_client.py  test_openai_llm_client.py  test_paths.py  test_soundcard_loopback_source.py  test_sounddevice_audio_source.py  test_subtitle_parser.py  test_yaml_config_loader.py  test_yaml_template_loader.py  test_youtube_audio_downloader.py
tests/l4_frameworks_and_drivers/: test_app.py  test_audio_worker.py  test_batch_runner.py  test_cli.py  test_config.py  test_container.py  test_container_audio_mode.py  test_file_transcription_worker.py  test_infra_config.py  test_label_rename.py  test_plugin_api.py  test_plugin_manifest.py  test_session_picker.py  test_template_picker.py  test_transcribe_app.py  test_view_app.py
tests/l4_frameworks_and_drivers/apps/: test_config_app.py  test_label_rename.py  test_record_app.py  test_transcribe_app.py  test_view_app.py
tests/l4_frameworks_and_drivers/pickers/: test_file_picker.py  test_session_picker.py  test_template_picker.py  test_welcome_picker.py
tests/l4_frameworks_and_drivers/widgets/: test_builtin_templates_notice.py  test_consent_notice.py  test_download_modal.py  test_query_modal.py  test_status_bar.py
tests/l4_frameworks_and_drivers/workers/: test_audio_worker.py  test_file_transcription_worker.py
tests/scripts/: test_build_app_bundle.py
