[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazy-take-notes"
version = "0.1.0"
description = "live transcription & AI summaries in your terminal."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{name = "Hoss", email = "CJHwong@gmail.com"}]
keywords = ["transcription", "meeting-notes", "whisper", "ollama", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "textual>=0.89",
    "pywhispercpp>=1.4.0",
    "ollama>=0.6",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "sounddevice>=0.5.0",
    # TODO: revert to soundcard>=0.4.0 once PyPI release includes numpy 2.x fix
    # (mediafoundation.py uses removed numpy.fromstring binary mode; fixed on master, unreleased)
    "soundcard @ git+https://github.com/bastibe/SoundCard.git@045e65a96112111f2cc86a033761645784197486",
    "numpy>=1.24.0",
    "huggingface_hub>=0.20.0",
    "pyperclip>=1.8",
    "platformdirs>=4.0",
]

[project.scripts]
lazy-take-notes = "lazy_take_notes.l4_frameworks_and_drivers.cli:cli"

[project.urls]
Homepage = "https://github.com/CJHwong/lazy-take-notes"
Repository = "https://github.com/CJHwong/lazy-take-notes"
Issues = "https://github.com/CJHwong/lazy-take-notes/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "textual-dev>=1.0",
    "import-linter>=2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lazy_take_notes"]
artifacts = [
    "src/lazy_take_notes/_native/bin/coreaudio-tap",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "PLC",  # pylint convention
]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLC0415"]
"test_*" = ["S", "PLC0415"]
"scripts/*" = ["S"]

[tool.ruff.format]
quote-style = "single"

[tool.ty.environment]
python-version = "3.11"
python = ".venv"

[tool.coverage.run]
source = ["lazy_take_notes"]
omit = ["src/lazy_take_notes/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    '^\s*\.\.\.\s*$',
]

[tool.importlinter]
root_packages = ["lazy_take_notes"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "L1 entities must not import L2, L3, L4, or framework libs"
type = "forbidden"
source_modules = ["lazy_take_notes.l1_entities"]
forbidden_modules = [
    "lazy_take_notes.l2_use_cases",
    "lazy_take_notes.l3_interface_adapters",
    "lazy_take_notes.l4_frameworks_and_drivers",
    "textual",
    "ollama",
    "openai",
    "pywhispercpp",
    "yaml",
    "click",
    "sounddevice",
    "soundcard",
]

[[tool.importlinter.contracts]]
name = "L2 use cases must not import L3, L4, or framework libs"
type = "forbidden"
source_modules = ["lazy_take_notes.l2_use_cases"]
forbidden_modules = [
    "lazy_take_notes.l3_interface_adapters",
    "lazy_take_notes.l4_frameworks_and_drivers",
    "textual",
    "ollama",
    "openai",
    "pywhispercpp",
    "yaml",
    "click",
    "sounddevice",
    "soundcard",
]

[[tool.importlinter.contracts]]
name = "L3 adapters must not import L4"
type = "forbidden"
source_modules = ["lazy_take_notes.l3_interface_adapters"]
forbidden_modules = [
    "lazy_take_notes.l4_frameworks_and_drivers",
]

[[tool.importlinter.contracts]]
name = "L3 adapters must not import textual"
type = "forbidden"
source_modules = ["lazy_take_notes.l3_interface_adapters"]
forbidden_modules = [
    "textual",
]
